--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,7 @@ footer{
     background-color: transparent;
     border-color: transparent;
     margin-bottom: 0em;
+    margin-right: 1em;
 }
 .navbar{
 	margin-bottom: 0em;
@@ -126,47 +127,52 @@ footer{
 	margin-bottom: 4em;
 }
 /****************************************PARCOURS***************************************/
+.btnloadcv{
+	margin-top: 2em;
+	text-align: center;
+}
+.textcv{
+	font-size: 1.4em;
+}
 .lecv{
-	height: 90em;
-	width: 100%;
-	background:url(../img/cv.pdf) no-repeat center center;
+	height: 150em;
+	width: auto;
+	background:url(../img/cv-1.jpg) no-repeat center center;
 	background-size: contain; /* version standardisée */
-	-webkit-background-size: cover; /* pour anciens Chrome et Safari */
+	-webkit-background-size: contain; /* pour anciens Chrome et Safari */
+}
+.lecv2{
+	height: 150em;
+	width: auto;
+	background:url(../img/cv-2.jpg) no-repeat center center;
+	background-size: contain; /* version standardisée */
+	-webkit-background-size: contain; /* pour anciens Chrome et Safari */
+	margin-bottom: 4em;
 }
 /****************************************PRÉSENTATION****************************************/
-#blocpres{
-	
-}	
 .presentation{
-	height: 58em;
-	width: auto;
-	background:url(../img/presentation.jpg) no-repeat center center;
-	background-size: cover; /* version standardisée */
-	-webkit-background-size: cover; /* pour anciens Chrome et Safari */
+	height: 58em;	
+	margin-top: 5em;
 }
 .centrage{
-	padding-top: 10em;
-	padding-left: 45em;
-	padding-right: 0;
+	margin: 0 auto;
 	width: 90em;
 }
 .titlepres{
-	text-align: justify;
+	text-align: justify-all;
 	font-size: 2em;
 }
 .textpres{
-	text-align: justify;
-}
-/*.paillettel{
-	float: left;
-	top: 5em;
-  	left: 0;
+	text-align: justify-all;
+	font-size: 1.4em;
 }
 .pailletter{
 	float:right;
-	bottom: 6.2em;
+	bottom: 12em;
   	right: 0;
-}*/
+    position: absolute;
+}
+
 /****************************************PRESTA / DEMARCHES****************************************/
 .pailletteleft{
 	float: left;
@@ -232,6 +238,7 @@ footer{
 .textunder{
 	font-family: "Raleway", sans-serif;
 	font-weight: 400;
+	font-size: 1.4em;
 	margin-top: 3em;
 	margin-bottom: 2em;
 	text-align: justify;
@@ -394,7 +401,7 @@ img, .prestastyle {
     left: 0;
     padding: 0.5em;
     background: #000;
-    background: rgba(0, 0, 0, .75);
+    background: rgba(0, 0, 0, .65);
     color: #fff;
     opacity: 0;
 }
@@ -406,6 +413,7 @@ img, .prestastyle {
 }
 .titlepartenaire{
 	color: orange;
+	font-size: 1.2em;
 	margin-top: 2em;
 }
 .textpartenaire{
